# app/Http/Resources/FullOrganizationResource.php
@@ -12,36 +12,48 @@ use OpenApi\Annotations as OA;
  *     description="Комплексное представление данных об организации",
  *     type="object",
  *     @OA\Property(
- *         property="organization",
- *         title="Данные организации",
- *         description="Объект, содержащий полную информацию об организации",
+ *         property="data",
+ *         title="Контейнер данных",
+ *         description="Объект-контейнер для данных организации",
  *         type="object",
- *         allOf={
- *             @OA\Schema(ref="#/components/schemas/OrganizationResource"),
- *             @OA\Schema(
- *                 required={"phones", "building", "activities"},
- *                 @OA\Property(
- *                     property="phones",
- *                     title="Контактные телефоны",
- *                     description="Список контактных номеров телефонов организации",
- *                     type="array",
- *                     @OA\Items(ref="#/components/schemas/OrganizationPhoneResource")
- *                 ),
- *                 @OA\Property(
- *                     property="building",
- *                     title="Здание размещения",
- *                     description="Информация о здании, где расположена организация",
- *                     ref="#/components/schemas/BuildingResource"
- *                 ),
- *                 @OA\Property(
- *                     property="activities",
- *                     title="Виды деятельности",
- *                     description="Перечень видов экономической деятельности организации",
- *                     type="array",
- *                     @OA\Items(ref="#/components/schemas/ActivityResource")
- *                 )
+ *         @OA\Property(
+ *             property="organization",
+ *             title="Данные организации",
+ *             description="Объект, содержащий полную информацию об организации",
+ *             type="object",
+ *             @OA\Property(
+ *                 property="id",
+ *                 title="Идентификатор",
+ *                 type="integer",
+ *                 example=3022
+ *             ),
+ *             @OA\Property(
+ *                 property="name",
+ *                 title="Наименование",
+ *                 type="string",
+ *                 example="ПАО Cиб"
+ *             ),
+ *             @OA\Property(
+ *                 property="phones",
+ *                 title="Контактные телефоны",
+ *                 description="Список контактных номеров телефонов организации",
+ *                 type="array",
+ *                 @OA\Items(ref="#/components/schemas/OrganizationPhoneResource")
+ *             ),
+ *             @OA\Property(
+ *                 property="building",
+ *                 title="Здание размещения",
+ *                 description="Информация о здании, где расположена организация",
+ *                 ref="#/components/schemas/BuildingResource"
+ *             ),
+ *             @OA\Property(
+ *                 property="activities",
+ *                 title="Виды деятельности",
+ *                 description="Иерархическое дерево видов экономической деятельности организации",
+ *                 type="array",
+ *                 @OA\Items(ref="#/components/schemas/ActivityResource")
  *             )
- *         }
+ *         )
  *     )
  * )
  */
